editMyProfile endpoint
