# swagger.yaml
@@ -331,7 +331,84 @@ paths:
                     type: boolean
                   error:
                     type: string
-
+  /user/editMyProfile:
+    put:
+      summary: Update user profile
+      description: Update the profile of the logged-in user.
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: The name of the user.
+                email:
+                  type: string
+                  description: The email address of the user.
+                password:
+                  type: string
+                  description: The password of the user.
+                location:
+                  type: string
+                  description: The location of the user.
+                images:
+                  type: string
+                  format: binary
+      responses:
+        '200':
+          description: User profile updated successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    description: Indicates whether the operation was successful.
+                  data:
+                    $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request. Some required fields are missing or invalid.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    description: Indicates whether the operation was successful.
+                  error:
+                    type: string
+                    description: Description of the error.
+        '404':
+          description: User not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    description: Indicates whether the operation was successful.
+                  error:
+                    type: string
+                    description: Description of the error.
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    description: Indicates whether the operation was successful.
+                  error:
+                    type: string
+                    description: Description of the error.
 components:
   schemas:
     Post:
